# KlaraFlow-Backend

./: .gitignore  TIMESHEET_IMPLEMENTATION.md  alembic.ini  api_endpoints.md  pyproject.toml
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 86c6eaea8622_dept_and_desig_fk.py  a1b2c3d4e5f6_add_timesheet_and_time_entries_tables.py  c70eb0b20193_initial_migration_establishing_baseline.py
scripts/: seeder.py
src/: main.py
src/config/: database.py
src/klaraflow/: main.py
src/klaraflow/api/v1/: auth_router.py  onboarding_router.py
src/klaraflow/api/v1/company_settings/: department_router.py  designation_router.py
src/klaraflow/api/v1/employees/: employee_router.py
src/klaraflow/api/v1/settings/: document_router.py  onboarding_template_router.py
src/klaraflow/base/: responses.py
src/klaraflow/config/: database.py  settings.py
src/klaraflow/core/: email_service.py  exceptions.py  s3_service.py  security.py
src/klaraflow/crud/: department_crud.py  designation_crud.py  document_template_crud.py  onboarding_crud.py  onboarding_template_crud.py  user_crud.py
src/klaraflow/dependencies/: auth.py
src/klaraflow/models/: __init__.py  base.py  company_model.py  department_model.py  designation_model.py  user_model.py
src/klaraflow/models/documents/: document_submission_model.py
src/klaraflow/models/onboarding/: document_model.py  onboarding_template_model.py  session_model.py  task_model.py  todo_item_model.py
src/klaraflow/models/settings/: document_template_model.py
src/klaraflow/schemas/: company_schema.py  department_schema.py  designation_schema.py  document_schema.py  onboarding_schema.py  user_schema.py
src/klaraflow/scripts/: seeder.py
src/klaraflow/services/: employee_service.py
src/klaraflow/timesheet/: README.md  __init__.py  crud.py  models.py  router.py  schemas.py
tests/: test_db_connection.py  test_timesheet_module.py
todos/: todos.MD
