[tool.poetry]
name = "klaraflow"
version = "0.1.0"
description = "KlaraFlow HRM"
authors = [
    "Shahryar Khan <shahryar2k3@gmail.com>"
]
readme = "README.md"
packages = [{include = "klaraflow", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.14,<0.116.0"
uvicorn = {extras = ["standard"], version = ">=0.35.0,<0.36.0"}
psycopg2-binary = ">=2.9.10,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
pydantic = ">=2.11.7,<3.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"

[tool.poetry.group.dev.dependencies]
poethepoet = ">=0.27.0,<0.28.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
dev = "uvicorn klaraflow.main:app --reload --port 3000"

# TODO
# start = "uvicorn klaraflow.main:app --host 0.0.0.0 --port 80"