[tool.poetry]
name = "klaraflow"
version = "0.1.0"
description = "KlaraFlow HRM"
authors = [
    "Shahryar Khan <shahryar2k3@gmail.com>"
]
readme = "README.md"
packages = [{include = "klaraflow", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.115.14,<0.116.0"
uvicorn = {extras = ["standard"], version = ">=0.35.0,<0.36.0"}
psycopg2-binary = ">=2.9.10,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
pydantic = {extras = ["email"], version = "^2.11.7"}
pydantic-settings = ">=2.10.1,<3.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.5.0"
python-multipart = "^0.0.20"
fastapi-mail = "^1.5.0"
sqlalchemy = "^2.0.43"
boto3 = "^1.40.33"

[tool.poetry.group.dev.dependencies]
poethepoet = ">=0.27.0,<0.28.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
dev = "uvicorn klaraflow.main:app --reload --port 3001"

# TODO
# start = "uvicorn klaraflow.main:app --host 0.0.0.0 --port 80"